--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,6 @@
 * {
     margin: 0px;
     padding: 0px;
+    background-color: red;
 }
 
-body {
-    font-size: 120%;
-    background: #f8f8f8;
-}
