--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,17 +17,19 @@ body {
 
 .navbar-title {
     font-size: 1.5rem;
-    margin: 1.5rem;
+    margin: 0.5rem;
 }
 
 .navbar-links ul {
     margin: 0;
     padding: 0;
     display: flex;
+    
 }
 
-.navbar-title li {
+.navbar-links li {
     list-style: none;
+    
 }
 
 .navbar-links li a {
@@ -35,15 +37,11 @@ body {
     color: white;
     padding: 1rem;
     display: block;
+     
+}
+
+.navbar-links li:hover {
+    background-color: #555;
 }
 
 
-
-form {
-    width: 30%;
-    margin: 0px auto;
-    padding: 20px;
-    border: 1px solid #B0C4DE;
-    background-color: rgb(245, 244, 241);
-    border-radius: 0ox 0px 10px 10px;
-}
