--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,7 +37,7 @@ body {
     color: white;
     padding: 1rem;
     display: block;
-     
+    
 }
 
 .navbar-links li:hover {
@@ -45,3 +45,7 @@ body {
 }
 
 
+.display-flex{
+    display: flex;
+    flex-direction: column;
+}
